--- a/views/Admin/users/profile.ejs
+++ b/views/Admin/users/profile.ejs
@@ -51,7 +51,7 @@
                                 <hr>
                                 <div class="col-sm-12 col-xs-12 tital " >Email : <%= users.email %></div><br>
                                 <hr>
-                                <div class="col-sm-12 col-xs-12 tital " >Ngày tạo : <%= moment(users.date).format( 'MM/DD/YYYY, h:mm:ss a') %></div><br>  <hr>
+                                <div class="col-sm-12 col-xs-12 tital " >Ngày tạo : <%= users.date_dd_mm_yyyy %></div><br>  <hr>
                                 <div class="col-sm-12 col-xs-12 tital " >
                                 <form action="/admin/profile" method="post" enctype="multipart/form-data" class='form-validate' id="ui">  
                                 <div class="form-group">  
