--- a/views/Admin/categorys/editCategory.ejs
+++ b/views/Admin/categorys/editCategory.ejs
@@ -35,14 +35,13 @@
                         <div class="col col-md-3"><label for="categoryType" class="form-control-label">Chọn chủng loại :</label></div>
                         <div class="col-12 col-md-9 mserro">
                         <select name="categoryType" id="categoryType" class="standardSelect form-control" data-rule-required="true">
-                        <% listType.forEach(item => { %>
-                                              
-                         <option value="<%= item._id %>" <%= item._id == list.categoryType ? "selected" : "" %> ><%= item.typeName %></option>
+                        <% 
+                        listType.forEach(item => { %>                                                                  
+                         <option value="<%= item._id %>" <% if (item._id == list.categoryType) { %> selected <% } %> ><%= item.typeName %></option>
                         <% }) %>                            
-                        <select>
-                        <%= list.categoryType %>
+                        <select>                       
                         </div>
-                    </div>  
+                    </div>
                     <div class="row form-group">
                         <div class="col col-md-3"><label for="parent" class="form-control-label">Chọn mục cha :</label></div>
                         <div class="col-12 col-md-9 mserro">
@@ -53,16 +52,16 @@
                     </div>  
                     <div class="row form-group">
                         <div class="col col-md-3"><label class="form-control-label">Tên danh mục :</label></div>
-                        <div class="col-12 col-md-9 mserro"><input type="text" id="categoryName" name="categoryName" placeholder="Nhập tên danh mục" class="form-control" data-rule-required="true"></div>
+                        <div class="col-12 col-md-9 mserro"><input type="text" id="categoryName" name="categoryName"  value="<%= list.categoryName %>" placeholder="Nhập tên danh mục" class="form-control" data-rule-required="true"></div>
                     </div>
                     <div class="row form-group">
                         <div class="col col-md-3"><label class=" form-control-label">Tên Alias:</label></div>
-                        <div class="col-12 col-md-9 mserro"><input type="text" id="categoryKey" name="categoryKey" placeholder="Nhập tên Alias" class="form-control"  data-rule-required="true"></div>
+                        <div class="col-12 col-md-9 mserro"><input type="text" id="categoryKey" name="categoryKey" value="<%= list.categoryKey %>" placeholder="Nhập tên Alias" class="form-control"  data-rule-required="true"></div>
                     </div>                  
                     
                      <div class="row form-group">
                         <div class="col col-md-3"><label class=" form-control-label">Thứ tự</label></div>
-                        <div class="col-12 col-md-9 mserro"><input type="text" id="order" name="order" placeholder="Nhập thứ tự của danh mục" class="form-control" data-rule-required="true" data-rule-number="true"></div>
+                        <div class="col-12 col-md-9 mserro"><input type="text" id="order" name="order" value="<%= list.order %>" placeholder="Nhập thứ tự của danh mục" class="form-control" data-rule-required="true" data-rule-number="true"></div>
                     </div>                    
                     <div class="row form-group">
                             <div class="col col-md-3"><label for="fileImg" class=" form-control-label">Chọn ảnh</label></div>
