--- a/views/Admin/categorys/index.ejs
+++ b/views/Admin/categorys/index.ejs
@@ -98,7 +98,7 @@ jQuery(document).ready(function($) {
         $(".table tbody input[name='txtOrder']").each(function() {                   
             list += $(this).val()+'-'+$(this).attr('id')+',';
         });
-        console.log(list);
+        //console.log(list);
         
         $.ajax({
         type: "GET",
@@ -109,6 +109,7 @@ jQuery(document).ready(function($) {
         success: function (done) {                        
             if(done.status){ 
                 bootbox.alert("Cập nhật thứ tự thành công");
+                location.reload(true);
             }
         }
         });
