--- a/views/Admin/categorys/indexType.ejs
+++ b/views/Admin/categorys/indexType.ejs
@@ -109,7 +109,7 @@ jQuery(document).ready(function($) {
         $(".table tbody input[name='txtOrder']").each(function() {                   
             list += $(this).val()+'-'+$(this).attr('id')+',';
         });
-        console.log(list);
+        //console.log(list);
         
         $.ajax({
         type: "GET",
@@ -120,6 +120,7 @@ jQuery(document).ready(function($) {
             success: function (done) {                        
                 if(done.status){ 
                     bootbox.alert("Cập nhật thứ tự thành công");
+                    location.reload(true);
                 }
             }
         });
