--- a/views/partials/backend/treeViewHtml.ejs
+++ b/views/partials/backend/treeViewHtml.ejs
@@ -8,9 +8,9 @@
     <td scope="row"><input type="checkbox" name="checkItem" class="checkItem" value="<%= item._id %>"></td>
     <td><%= space %><%= item.categoryName %></td>
     <td><% if(item.imageUrl != ''){%>
-        <img src="/uploads/<%= item.imageUrl %>" class="align-self-center rounded-circle mr-3" alt="<%= item.categoryName %>" style="width:50px; height:50px;">                                         
+        <img src="/uploads/<%= item.imageUrl %>" class="align-self-center img-thumbnail mr-3" alt="<%= item.categoryName %>" style="width:50px; height:50px;">                                         
     <% } else { %>
-        <img src="/images/noimg.jpg" class="align-self-center rounded-circle mr-3" alt="<%= item.categoryName %>" style="width:50px; height:50px;"> 
+        <img src="/images/noimg.jpg" class="align-self-center img-thumbnail mr-3" alt="<%= item.categoryName %>" style="width:50px; height:50px;"> 
         <% } %></td>
         <td><%= item.categoryType.typeName %></a></td>
     <td><%= item.level %></a></td>
