chuyển không layoout

--- a/views/Admin/categorys/EditCategoryType.ejs
+++ b/views/Admin/categorys/EditCategoryType.ejs
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <% include ../../partials/backend/partialLink %> 
+    <% include ../../partials/backend/partialCsript %>
+  </head>
+  <body> 
 <% include ../../partials/backend/aside %> 
 <div id="right-panel" class="right-panel">
 <% include ../../partials/backend/header %>
@@ -52,3 +59,6 @@
 </div>
 
 </div>
+
+</body>
+</html>
