--- a/views/Admin/categorys/index.ejs
+++ b/views/Admin/categorys/index.ejs
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <% include ../../partials/backend/partialLink %> 
+    <% include ../../partials/backend/partialCsript %>
+  </head>
+  <body> 
 <% include ../../partials/backend/aside %> 
 <div id="right-panel" class="right-panel">
 <% include ../../partials/backend/header %>
@@ -115,6 +122,7 @@ jQuery(document).ready(function($) {
     });
 });
 
-
 </script>
+</body>
+</html>
 
