--- a/views/Admin/index.ejs
+++ b/views/Admin/index.ejs
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <% include ../partials/backend/partialLink %> 
+    <% include ../partials/backend/partialCsript %>
+  </head>
+  <body>
 <% include ../partials/backend/aside %> 
 <div id="right-panel" class="right-panel">
 <% include ../partials/backend/header %>
@@ -33,3 +40,5 @@
 </div>
 
 </div>
+</body>
+</html>
