--- a/views/Admin/users/changpass.ejs
+++ b/views/Admin/users/changpass.ejs
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <% include ../../partials/backend/partialLink %> 
+    <% include ../../partials/backend/partialCsript %>
+  </head>
+  <body> 
 <% include ../../partials/backend/aside %> 
 <div id="right-panel" class="right-panel">
 <% include ../../partials/backend/header %>
@@ -62,3 +69,5 @@
         </div><!-- .content -->
 
 </div>
+</body>
+</html>
