--- a/views/Admin/users/editUser.ejs
+++ b/views/Admin/users/editUser.ejs
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <% include ../../partials/backend/partialLink %> 
+    <% include ../../partials/backend/partialCsript %>
+  </head>
+  <body> 
 <% include ../../partials/backend/aside %> 
 <div id="right-panel" class="right-panel">
 <% include ../../partials/backend/header %>
@@ -89,3 +96,5 @@
 </div>
 
 </div>
+</body>
+</html>
