--- a/views/Admin/users/login.ejs
+++ b/views/Admin/users/login.ejs
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <% include ../../partials/backend/partialLink %> 
+    <% include ../../partials/backend/partialCsript %>
+  </head>
+<body class="bg-dark">
 <div class="sufee-login d-flex align-content-center flex-wrap">
         <div class="container">
             <div class="login-content">
@@ -49,3 +56,5 @@
             </div>
         </div>
     </div>
+      </body>
+</html>
