--- a/views/Admin/users/register.ejs
+++ b/views/Admin/users/register.ejs
@@ -1,3 +1,10 @@
+ <!DOCTYPE html>
+<html>
+  <head>
+    <% include ../../partials/backend/partialLink %> 
+    <% include ../../partials/backend/partialCsript %>
+  </head>
+  <body>
  <div class="sufee-login d-flex align-content-center flex-wrap">
         <div class="container">
             <div class="login-content">
@@ -33,3 +40,5 @@
             </div>
         </div>
     </div>
+</body>
+</html>
