--- a/views/Admin/categorys/indexType.ejs
+++ b/views/Admin/categorys/indexType.ejs
@@ -74,8 +74,7 @@
                                         <th scope="col">Active</th>  
                                          <th scope="col">Home</th>                                 
                                         <th scope="col">Thứ tự</th>
-                                        <th scope="col">Người tạo</th>                                   
-                                        <th scope="col">Ngày tạo</th>
+                                        <th scope="col">Cỡ trang</th> 
                                         <th scope="col">người sửa</th>
                                         <th scope="col">Ngày sửa</th>                                    
                                         <th scope="col"></th>
