fix categroy + add product

--- a/views/Admin/categorys/addCategory.ejs
+++ b/views/Admin/categorys/addCategory.ejs
@@ -76,7 +76,7 @@
                     </div>
                     <div class="row form-group">
                         <div class="col col-md-3"><label class=" form-control-label">Meta Description:</label></div>
-                        <div class="col-12 col-md-9 mserro"><input type="text" id="metaDescription" name="metaDescription" placeholder="Nhập Description" class="form-control"  data-rule-required="true"></div>
+                        <div class="col-12 col-md-9 mserro"><textarea  id="metaDescription" name="metaDescription" placeholder="Nhập Description" class="form-control"  data-rule-required="true" rows="2"></textarea></div>
                     </div>
                     <div class="row form-group">
                         <div class="col col-md-3"><label class=" form-control-label">Cỡ trang:</label></div>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="row form-group">
                         <div class="col col-md-3"><label class=" form-control-label">Chi tiết:</label></div>
-                        <div class="col-12 col-md-9 mserro"><textarea id="detail" name="detail" placeholder="Nhập chi tiết" class="form-control"   rows="4"></textarea></div>
+                        <div class="col-12 col-md-9 mserro"><textarea id="detail" name="detail" placeholder="Nhập chi tiết" class="form-control" rows="4"></textarea></div>
                     </div>                   
 
                     <div class="row form-group">
