--- a/views/Admin/categorys/editCategory.ejs
+++ b/views/Admin/categorys/editCategory.ejs
@@ -78,7 +78,7 @@
                     </div>
                     <div class="row form-group">
                         <div class="col col-md-3"><label class=" form-control-label">Meta Description:</label></div>
-                        <div class="col-12 col-md-9 mserro"><input type="text" id="metaDescription" name="metaDescription" value="<%= list.metaDescription %>" placeholder="Nhập Description" class="form-control"  data-rule-required="true"></div>
+                        <div class="col-12 col-md-9 mserro"><textarea id="metaDescription" name="metaDescription" placeholder="Nhập Description" class="form-control"  data-rule-required="true" rows="2"><%= list.metaDescription %></textarea></div>
                     </div>
                     <div class="row form-group">
                         <div class="col col-md-3"><label class=" form-control-label">Cỡ trang:</label></div>
@@ -104,11 +104,11 @@
                     </div>
                     <div class="row form-group">
                         <div class="col col-md-3"><label class=" form-control-label">Mô tả ngắn:</label></div>
-                        <div class="col-12 col-md-9 mserro"><textarea id="preview" name="preview" value="<%= list.preview %>"  placeholder="Nhập mô tả ngắn" class="form-control" rows="3"></textarea></div>
+                        <div class="col-12 col-md-9 mserro"><textarea id="preview" name="preview" placeholder="Nhập mô tả ngắn" class="form-control" rows="3"><%= list.preview %></textarea></div>
                     </div>
                     <div class="row form-group">
                         <div class="col col-md-3"><label class=" form-control-label">Chi tiết:</label></div>
-                        <div class="col-12 col-md-9 mserro"><textarea id="detail" name="detail" value="<%= list.detail %>" placeholder="Nhập chi tiết" class="form-control"  rows="4"></textarea></div>
+                        <div class="col-12 col-md-9 mserro"><textarea id="detail" name="detail" placeholder="Nhập chi tiết" class="form-control"  rows="4"><%= list.detail %></textarea></div>
                     </div>  
                     <div class="row form-group">
                         <div class="col col-md-3"> &nbsp; </div>
