--- a/views/Admin/categorys/indexType.ejs
+++ b/views/Admin/categorys/indexType.ejs
@@ -37,16 +37,16 @@
                         <div class="col col-md-6">
                             <form action="/admin/category/searchType/<%= typeId %>" method="POST" class="form-horizontal">
                                 <div class="input-group">
-                                    <input type="text" class="form-control col-md-6"  name="textsearch" id="textsearch" placeholder="Nhập từ khóa tìm kiếm...">
+                                    <input type="text" class="form-control col-md-6 form-control-sm"  name="textsearch" id="textsearch" placeholder="Nhập từ khóa tìm kiếm...">
                                         <span class="input-group-btn">
-                                        <button class="btn btn-info" type="submit"><i class="fa fa-search fa-fw"></i> Tìm kiếm</button>
+                                        <button class="btn btn-info btn-sm" type="submit"><i class="fa fa-search fa-fw"></i> Tìm kiếm</button>
                                         </span>
                                 </div>
                             </form>                        
                         </div>
                         <form action="/admin/category/TypeIndex/<%= typeId %>" method="POST" class="form-horizontal" onSubmit="if(!confirm('Bạn có muốn xóa không?')){return false;}">
                         <div class="col-12 col-md-6">
-                            <div class="float-right mt-2">
+                            <div class="float-right">
                                 <a href="/admin/category/add/" class="btn btn-success btn-sm" style="color: #fff;">
                                     <i class="fa fa-plus"></i> Thêm mới
                                 </a>
